--- a/tkytekstil/appsettings.json
+++ b/tkytekstil/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=91.191.173.144; Initial Catalog=tkyteksti_db; user id=sa; password=^QSiTWXT4s2@; MultipleActiveResultSets=True; App=EntityFramework;"
+    "Default": ""
   },
   "Logging": {
     "LogLevel": {
@@ -11,11 +11,11 @@
   },
   "AllowedHosts": "*",
   "EmailConfiguration": {
-    "From": "iletisim@tkytekstil.com",
+    "From": "",
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "iletisim@tkytekstil.com",
-    "Password": "!9jtky7.Ioxc.",
+    "Password": "",
     "UseSSL": false
   }
 }
