--- a/tkytekstil/appsettings.json
+++ b/tkytekstil/appsettings.json
@@ -14,7 +14,7 @@
     "From": "",
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "iletisim@tkytekstil.com",
+    "Username": "",
     "Password": "",
     "UseSSL": false
   }
